--- a/.github/workflows/pipeline-security-regression.yml
+++ b/.github/workflows/pipeline-security-regression.yml
@@ -41,7 +41,6 @@ jobs:
         sudo apt-get install -y \
           build-essential \
           libpam0g-dev \
-          libpam-modules-dev \
           clang \
           valgrind \
           cppcheck
@@ -125,8 +124,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libpam0g-dev libpam-modules-dev
-        
+        sudo apt-get install -y build-essential libpam0g-dev
+
     - name: Build for security audit
       run: |
         make clean
