tests(ci): add basic pipeline regression test and fix Makefile rules; unblock CI smoke/regression targets

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,7 @@ coverage.xml
 .ansible/
 ansible_plugins/__pycache__/
 ansible_plugins/**/__pycache__/
+
+
+# Allow committed C regression test driver for pipeline tests
+!tests/test_pipeline_regression.c
