Improve shell redirection message: make it concise and reference manpage
- Replace verbose educational message with concise 3-line format
- Reference manpage for detailed information
- Maintain professional, informative tone
- Update documentation and tests to match new format
- All shell redirection tests passing

New format:
sudosh: redirecting 'bash' to secure interactive shell
sudosh: provides enhanced logging and security controls
sudosh: see 'man sudosh' for details, 'help' for commands

--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -418,24 +418,9 @@ Intelligent shell redirection when sudosh is aliased to sudo:
 .nf
 # User attempts to run bash through sudo alias
 $ sudo bash
-
-=== SUDOSH SHELL REDIRECTION ===
-You attempted to run: bash
-
-sudosh is aliased to 'sudo' on this system for enhanced security.
-Instead of launching bash directly, sudosh provides a secure
-interactive shell with comprehensive logging and security controls.
-
-Benefits of sudosh over bash:
-• Complete command logging and audit trail
-• Protection against dangerous operations
-• Enhanced tab completion and command history
-• Built-in security validation and guidance
-• Safe text processing with awk, sed, grep
-
-Dropping you into secure sudosh shell...
-Type 'help' for available commands or 'exit' to quit.
-================================
+sudosh: redirecting 'bash' to secure interactive shell
+sudosh: provides enhanced logging and security controls
+sudosh: see 'man sudosh' for details, 'help' for commands
 
 sudosh:/home/user#
 .fi
