Add automatic sudo symlink creation during installation
- Install target now creates sudo -> sudosh symlink in /usr/local/bin
- Enables intelligent shell redirection feature automatically
- Uninstall target properly removes both binary and symlink
- Updated documentation to explain automatic symlink creation
- Enhanced user experience with zero-configuration setup

Benefits:
- Users get intelligent shell redirection immediately after installation
- No manual symlink creation required
- Proper cleanup during uninstallation
- Professional installation experience

--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -931,7 +931,9 @@ make
 sudo make install
 .fi
 
-This installs the binary to /usr/local/bin/sudosh with setuid root permissions.
+This installs the binary to /usr/local/bin/sudosh with setuid root permissions
+and automatically creates a sudo -> sudosh symlink to enable intelligent shell
+redirection when users run shell commands through sudo.
 
 .SH VIEWING LOGS
 To view sudosh logs:
