ci: add workflow_dispatch to Build Matrix to allow manual runs

--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -5,6 +5,8 @@ on:
     branches: [ chore/audit-v2.0.2, ci/sanitizers-and-werror ]
   pull_request:
     branches: [ main, chore/audit-v2.0.2 ]
+  workflow_dispatch:
+
 
 jobs:
   build:
