ci: fix build matrix by excluding macOS+gcc combo; only run clang on macOS and gcc/clang on Ubuntu

--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -19,6 +19,9 @@ jobs:
         compiler: [gcc, clang]
         mode: [release]
         sanitize: ["", address, undefined]
+        exclude:
+          - os: macos-14
+            compiler: gcc
         include:
           - os: ubuntu-22.04
             compiler: gcc
