--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -74,6 +74,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libpam0g-dev cppcheck valgrind
+          if [ "${{ matrix.compiler }}" = "clang" ]; then
+            sudo apt-get install -y clang
+          fi
       - name: Install deps (macOS)
         if: startsWith(matrix.os, 'macos')
         run: |
