tests: add path-validator integration test; expand Ansible detection tests (env prefix/count, execution context); docs: add PATH Security Validator manpage section\n\n- Integration tests cover quiet secure/insecure, cleaning, and help\n- Unit tests expand env var detection breadth and context scoring\n- Manpage documents standalone path-validator usage\n\nCo-authored-by: Augment Code <support@augmentcode.com>

--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -358,6 +358,22 @@ sudosh:/home/user# cd /var/log
 sudosh:/var/log# pwd
 sudosh:/var/log# commands
 sudosh:/var/log# rules
+
+.SS PATH Security Validator
+The standalone \fBpath-validator\fR tool validates and cleans PATH for security issues.
+.IP \(bu 2
+\fBUsage\fR: \fBpath-validator [OPTIONS]\fR; use \fB-h\fR for help
+.IP \(bu 2
+\fBExit codes\fR: 0=secure, 1=issues found, 2=error
+.IP \(bu 2
+\fBExamples\fR:
+.RS
+.IP \(bu 2
+\fBpath-validator -q -p "/bin:/usr/bin"\fR (quiet validation)
+.IP \(bu 2
+\fBpath-validator -c -p ".:/bin::/usr/bin"\fR (print cleaned PATH)
+.RE
+
 sudosh:/var/log# help
 sudosh:/var/log# exit
 .fi
